Started implementing hard bot and added in multithreading for simulations

--- a/Cribbage.vcxproj
+++ b/Cribbage.vcxproj
@@ -118,6 +118,8 @@
   <ItemGroup>
     <ClInclude Include="core\Board.h" />
     <ClInclude Include="core\Card.h" />
+    <ClInclude Include="Core\Constants.h" />
+    <ClInclude Include="Core\ctpl_stl.h" />
     <ClInclude Include="core\Deck.h" />
     <ClInclude Include="core\GlobalHelperFunctions.h" />
     <ClInclude Include="core\Score.h" />
