--- a/Cribbage.vcxproj.filters
+++ b/Cribbage.vcxproj.filters
@@ -104,5 +104,11 @@
     <ClInclude Include="players\Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Core\Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\ctpl_stl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
