--- a/Cribbage.vcxproj.filters
+++ b/Cribbage.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClInclude Include="Core\ctpl_stl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Core\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
